# Sunnie-PINNs-Course

./: .cursorrules  README.md  WBS_TODO_LIST.md  check_torch.py  pytorch_pinn_template.ipynb  torch_test.ipynb
00-Course_Setup/: README.md  pyproject.toml
01-PINN_Core_Concepts/: README.md
01-PINN_Core_Concepts/1.1-Simple_ODE_Example/: README.md  simple_ode.ipynb  simple_ode.py
02-Standard_PINNs_for_Forward_Problems/: README.md
02-Standard_PINNs_for_Forward_Problems/2.1-Parabolic_PDE-1D_Heat_Equation/: README.md  heat_equation.ipynb  heat_equation.py  heat_equation_pytorch.ipynb
02-Standard_PINNs_for_Forward_Problems/2.2-Elliptic_PDE-2D_Poisson_Equation/: README.md  poisson_equation.ipynb  poisson_equation.py  poisson_equation_pytorch.ipynb
02-Standard_PINNs_for_Forward_Problems/2.3-Nonlinear_PDE-1D_Burgers_Equation/: README.md  burgers_equation.ipynb  burgers_equation.py  burgers_equation_pytorch.ipynb
03-Advanced_Applications-Inverse_Problems/: README.md
03-Advanced_Applications-Inverse_Problems/3.1-Heat_Equation_Parameter_Discovery/: README.md  heat_inverse.ipynb  heat_inverse.py  heat_inverse_pytorch.ipynb
04-Optimization_Challenges_and_Solutions/: README.md
04-Optimization_Challenges_and_Solutions/4.1-Theory-Gradient_Pathologies/: README.md
04-Optimization_Challenges_and_Solutions/4.2-Adaptive_Weights-SA-PINN/: README.md  sa_pinn_example.ipynb  sa_pinn_example.py  (+1 more)
05-Specialized_and_Frontier_Topics/: README.md  advanced_pinn_techniques_pytorch.ipynb
06-Capstone_Project-Navier_Stokes/: README.md
Utils/: README.md  plotters.py
(+28 files in other folders)
