[tool.poetry]
name = "pinns-course"
version = "0.1.0"
description = "A comprehensive course on Physics-Informed Neural Networks with PyTorch and DeepXDE."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "Utils"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "^2.3.1"
deepxde = "^1.9.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
